--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "querystring-browser": "^1.0.4",
     "ramda": "^0.24.1",
     "react": "^16.2.0",
+    "react-hyperscript": "^3.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "through2": "^2.0.3"
+    "redux": "^3.7.2"
   }
 }
