--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
   "browser": {
     "querystring": "querystring-browser"
   },
+  "peerDependencies": {
+    "react": "^16.8.2"
+  },
   "dependencies": {
     "prop-types": "^15.5.10",
     "querystring-browser": "^1.0.4",
-    "ramda": "^0.24.1",
-    "react": "^16.2.0",
-    "react-hyperscript": "^3.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react-hyperscript": "^3.2.0"
   }
 }
