--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react": ">= 16.0.0 < 18.0.0"
   },
   "dependencies": {
-    "querystring": "^0.2.1",
-    "react-hyperscript": "^3.2.0"
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
