Add makefile recipes for type checking and creating declaration file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,11 @@
     "module": "commonjs",
 
     "allowSyntheticDefaultImports": true,
+    "emitDeclarationOnly": true,
 
-    "noEmit": true,
+    "declaration": true,
     "strict": true,
+    "out": "dist/index.js",
 
     "moduleResolution": "node"
   },
